--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
 <body>
     <header>
     <div class="second">
-    <p>1.Прокидатися</p>
-    <p>2.Зробити зарядку</p>
-    <p>3.Піти поснідати</p>
-    <p>4.Почистити зуби</p>
+    <p>1.Прокидаюся</p>
+    <p>2.Зроблю зарядку</p>
+    <p>3.Снідаю</p>
+    <p>4.Почитив зуби</p>
     <p>5.Годую свого домашнього улюбленся</p>
     <p>6.Вдягаюсь</p>
     <P>7.іду до автобуса</P>
     <P>8.Їду на автобусі</P>
-    <P>9.Вчиюсь</P>
+    <P>9.Вчуся</P>
     <P>10.Їду на автобусі додому</P>
     <P>11.Іду додому</P>
-    <P>12.Вчю уроки</P>
+    <P>12.Вчу уроки</P>
     <P>13.Граю на вулиці</P>
     <P>14.Трохи граю в ноутбук</P>
-    <P>15.Почистити зуби</P>
-    <P>16.Лягати спати</P>
+    <P>15.Почистив зуби</P>
+    <P>16.Лягаю спати</P>
 </header>
 </div>
 </body>
